Changes of Pre-prod and Prod

--- a/BrokenLink/src/main/resources/config.properties
+++ b/BrokenLink/src/main/resources/config.properties
@@ -1,28 +1,21 @@
-
-Env=STG
+Env=Prod
 URL=http://10.20.104.82:8072/
-
-
-
 DEVURL=
 DEVUserName=
 DEVPassword=
-
-
 STGURL=http://10.20.104.82:8072/
 STGUserName=automation
 STGPassword=automation
-
-
 PREPRODURL=http://10.20.104.71:7072/
 PREPRODUserName=automation
 PREPRODPassword=automation
-
-
+PRODURL=http://10.20.104.71:7072/
+PRODUserName=automation
+PRODPassword=automation
 DEVFile=.\\src\\main\\resources\\\AllLinks_DEV.xlsx
 STGFile=.\\src\\main\\resources\\\AllLinks_STG.xlsx
 PrePRODFile=.\\src\\main\\resources\\\\AllLinks_Pre-Prod.xlsx
-
+PRODFile=.\\src\\main\\resources\\\\AllLinks_Prod.xlsx
 #======Common=========
 ClosePopUp_xpath=//*[@ng-click="close()"]
 SuccessMsg_id=success
@@ -32,30 +25,19 @@ RLSearch_id=btnSearch
 RLReset_id=btnReset
 Close_id=idanchorclose
 Error_id=errorid
-
 #======UploadDoc=========
-
-
-
-
 #======Connect Login=========
 UserName_id=inputUsername
 Password_id=inputPassword
 Login_id=btnLogin
-
-
 #======NetAgent Login=========
 NAUserName_id=inputUsername
 NAPassword_id=inputPassword
 NALogin_id=idsigninbutton
-
-
 #======NetAgent Login=========
 NSUserName_id=inputUsername
 NSPassword_id=inputPassword
 NSLogin_id=btnSignIn
-
-
 #======NetAgent Support Login=========
 NASUserName_id=supinputUsername
 NASPassword_id=supinputPassword
@@ -64,7 +46,6 @@ NASProcess_id=btnProceed
 NASCourier_id=supinputCourier
 NASProfDrp_id=supdrpProfile
 NASImg_id=img_profile
-
 #======NetAgent Support Login=========
 NSSUserName_id=supinputUsername
 NSSPassword_id=supinputPassword
@@ -73,22 +54,8 @@ NSSProcess_id=btnProceed
 NSSCustomer_id=txtCustomer
 NSSOPTDrp_id=supdrpIMpopunit
 NSSImg_id=img_profile
-
-
 #======FedEx Login=========
 FDXloginDiv_id=Header_fdx_main_liLogin
 FDXUserName_id=Header_fdx_main_logon_name
 FDXPassword_id=Header_fdx_main_logon_password
 FDXLogin_id=Header_fdx_main_cmdMenuLogin
-
-
-
-
-
-
-
-
-
-
-
-
